netpol/netpold2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolstg2
  namespace: stg
spec:
 podSelector:
   matchLabels:
    app: bogus
 policyTypes:
    - Ingress
 ingress:
   - from:
     - namespaceSelector:
        matchLabels:
          name: qa
       podSelector:
        matchLabels:
         app: frontend         
     ports:
      - protocol: TCP
        port: 80
